--- a/src/TimeyWimey/TimeyWimey.csproj
+++ b/src/TimeyWimey/TimeyWimey.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="7.0.0-preview.4.22229.4" />
     <PackageReference Include="MudBlazor" Version="6.0.10" />
     <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.0-pre20220427180151" />
+    <PackageReference Include="System.Reactive" Version="5.0.0" />
     <!--<NativeFileReference Include="Data\e_sqlite3.o" />-->
   </ItemGroup>
 
