--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,6 +28,8 @@ jobs:
       run: dotnet restore ${{env.PROJECT_DIR}}
     - name: Publish
       run: dotnet publish -o ${{env.PUBLISH_DIR}}  ${{env.PROJECT_DIR}} --no-restore
+    - name: Change base-tag in index.html from / to BlazorGitHubPagesDemo
+      run: sed -i 's/<base href="\/" \/>/<base href="\/TimeyWimey\/" \/>/g' release/wwwroot/index.html
     - name: Commit wwwroot to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@v4.3.3
       with:
