--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,7 +26,7 @@ jobs:
       with:
         dotnet-version: 6.0.x
     - name: Restore dependencies
-      run: dotnet restore -C ${{env.BUILD_CONFIG}} ${{env.PROJECT_DIR}}
+      run: dotnet restore ${{env.PROJECT_DIR}}
     - name: Publish
       run: dotnet publish -C ${{env.BUILD_CONFIG}}-o ${{env.PUBLISH_DIR}}  ${{env.PROJECT_DIR}} --no-restore
     - name: Change base-tag in index.html from / to BlazorGitHubPagesDemo
