I guess it's lower case -c then...

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore ${{env.PROJECT_DIR}}
     - name: Publish
-      run: dotnet publish -C ${{env.BUILD_CONFIG}}-o ${{env.PUBLISH_DIR}}  ${{env.PROJECT_DIR}} --no-restore
+      run: dotnet publish -c ${{env.BUILD_CONFIG}} -o ${{env.PUBLISH_DIR}}  ${{env.PROJECT_DIR}} --no-restore
     - name: Change base-tag in index.html from / to BlazorGitHubPagesDemo
       run: sed -i 's/<base href="\/" \/>/<base href="\/TimeyWimey\/" \/>/g' publish/wwwroot/index.html
     - name: Add .nojekyll file
