--- a/src/TimeyWimey/TimeyWimey.csproj
+++ b/src/TimeyWimey/TimeyWimey.csproj
@@ -8,6 +8,10 @@
       <EmccExtraLDFlags>-lidbfs.js</EmccExtraLDFlags>
   </PropertyGroup>
 
+    <PropertyGroup Condition="'$(Configuration)' == 'Release'">
+        <WasmBuildNative>true</WasmBuildNative>
+    </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.4" PrivateAssets="all" />
