--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,6 +25,8 @@ jobs:
       uses: actions/setup-dotnet@v2
       with:
         dotnet-version: 6.0.202
+    - name: Install WASM tools
+      run: dotnet workload install wasm-tools
     - name: Restore dependencies
       run: dotnet restore ${{env.PROJECT_DIR}}
     - name: Publish
