--- a/src/TimeyWimey/TimeyWimey.csproj
+++ b/src/TimeyWimey/TimeyWimey.csproj
@@ -8,9 +8,9 @@
       <EmccExtraLDFlags>-lidbfs.js</EmccExtraLDFlags>
   </PropertyGroup>
 
-    <PropertyGroup Condition="'$(Configuration)' == 'Release'">
+    <!--<PropertyGroup Condition="'$(Configuration)' == 'Release'">
         <WasmBuildNative>true</WasmBuildNative>
-    </PropertyGroup>
+    </PropertyGroup>-->
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.4" />
