--- a/src/TimeyWimey/TimeyWimey.csproj
+++ b/src/TimeyWimey/TimeyWimey.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
       <EmccExtraLDFlags>-lidbfs.js</EmccExtraLDFlags>
+      <NullabilityInfoContextSupport>true</NullabilityInfoContextSupport>
   </PropertyGroup>
 
     <!--<PropertyGroup Condition="'$(Configuration)' == 'Release'">
